tests/ui/nll/closure-requirements/type-test-subject-unnamed-region.stderr
error[E0310]: the associated type `<I as Trait>::Item<'_>` may not live long enough
  --> $DIR/type-test-subject-unnamed-region.rs:11:27
   |
LL |     let closure = |a, _b| assert_static(a);
   |                           ^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `<I as Trait>::Item<'_>: 'static`...
   = note: ...so that the type `<I as Trait>::Item<'_>` will meet its required lifetime bounds

error[E0310]: the associated type `<I as Trait>::Item<'_>` may not live long enough
  --> $DIR/type-test-subject-unnamed-region.rs:20:9
   |
LL |         assert_static(a);
   |         ^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `<I as Trait>::Item<'_>: 'static`...
   = note: ...so that the type `<I as Trait>::Item<'_>` will meet its required lifetime bounds

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0310`.
